[package]
name = "cf_dyn_dns"
version = "0.1.0"
description = "CloudFlare dynamic DNS updater"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.1", features = ["cargo"]}
error-chain = "0.12.4"
reqwest = {version = "0.11.24", features = ["blocking"]}
serde_json = "1.0.114"

